--- a/dashboard.html
+++ b/dashboard.html
@@ -582,6 +582,8 @@
         </div>
     </div>
 
+    <!-- Face Recognition Library -->
+    <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
     <script src="face_auth.js"></script>
     <script src="chatbot.js"></script>
     <script src="app.js"></script>
